--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 						<div class="inner">
 							<header>
 								<p></p>
-								<span class="image main"><img src="images/Interstellar logo.gif" alt="" /></span>
-								<h2 style="text-align:center">Call 905-751-8653 to book a move today!</h2>
+								<span class="image main"><img src="images/Bloody Hel Cover.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
 								<p></p>
 							</header>
 							<section class="tiles">
