--- a/index.html
+++ b/index.html
@@ -23,8 +23,29 @@
 								<span class="image main"><img src="images/Bloody Hel page 01.png" alt="" /></span>
 								<h2 style="text-align:center"></h2>
 								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/Bloody Hel page 02.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/Bloody Hel page 03.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/Bloody Hel page 04.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/Bloody Hel page 05.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/Bloody Hel page 06.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
 							</header>
 							<section class="tiles">
+								<!--
 								<article class="cover">
 									<span class="image">
 
@@ -120,7 +141,7 @@
 								</article>
 
 
-								<!--
+								
 
 								<article class="style5">
 									<span class="image">
