--- a/index.html
+++ b/index.html
@@ -91,6 +91,30 @@
 								<span class="image main"><img src="images/BH pg 02 panel 06.png" alt="" /></span>
 								<h2 style="text-align:center"></h2>
 								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 03 panel 01.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 03 panel 02.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 03 panel 03.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 03 panel 04.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 03 panel 05.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 03 panel 06.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
 							</header>
 							<section class="tiles">
 								<!--
