--- a/index.html
+++ b/index.html
@@ -139,6 +139,61 @@
 								<span class="image main"><img src="images/BH pg 04 panel 06.png" alt="" /></span>
 								<h2 style="text-align:center"></h2>
 								<p></p>
+								<span class="image main"><img src="images/BH pg 05 panel 01.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 05 panel 02.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 05 panel 03.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 05 panel 04.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 05 panel 05.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 05 panel 06.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 05 panel 07.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 06 panel 01.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 06 panel 02.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 06 panel 03.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 06 panel 04.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 06 panel 05.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 06 panel 06.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
+								<p></p>
+								<span class="image main"><img src="images/BH pg 06 panel 07.png" alt="" /></span>
+								<h2 style="text-align:center"></h2>
+								<p></p>
 							</header>
 							<section class="tiles">
 								<!--
