--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 								<p></p>
 							</header>
 							<section class="tiles">
-								<!--
+								
 								<article class="cover">
 									<span class="image">
 										<img src="images/Bloody Hel Cover.png" alt="" />
@@ -213,6 +213,8 @@
 										</div>
 									</a>
 								</article>
+							</section>
+								<!--
 								<article class="style2">
 									<span class="image">
 
