--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 								
 								<section class="tiles">
 								
-									<article class="cover">
+									<article class="style1">
 										<span class="image">
 											<img src="images/Bloody Hel Cover.png" alt="" />
 										</span>
