--- a/index.html
+++ b/index.html
@@ -196,21 +196,15 @@
 								<p></p>
 							</header>
 							<section class="tiles">
-								<!--
+								
 								<article class="cover">
 									<span class="image">
 										<img src="images/Bloody Hel Cover.png" alt="" />
 									</span>
-									<a href="moving.html">
-
-										<h2>Moving</h2>
-										<div class="content">
-											<p>Interstellar takes care of all your moving concerns.
-												 From point A to point B.
-											</p>
-										</div>
-									</a>
+									
 								</article>
+							</section>
+							<!--
 								<article class="style2">
 									<span class="image">
 
