--- a/index.html
+++ b/index.html
@@ -201,8 +201,38 @@
 									<span class="image">
 										<img src="images/Bloody Hel Cover.png" alt="" />
 									</span>
-									
 								</article>
+								<article class="cover">
+									<span class="image">
+										<img src="images/BH pg 01 panel 01.png" alt="" />
+									</span>
+								</article>
+								<article class="cover">
+									<span class="image">
+										<img src="images/BH pg 01 panel 02.png" alt="" />
+									</span>
+								</article>
+								<article class="cover">
+									<span class="image">
+										<img src="images/BH pg 01 panel 03.png" alt="" />
+									</span>
+								</article>
+								<article class="cover">
+									<span class="image">
+										<img src="images/BH pg 01 panel 04.png" alt="" />
+									</span>
+								</article>
+								<article class="cover">
+									<span class="image">
+										<img src="images/BH pg 01 panel 05.png" alt="" />
+									</span>
+								</article>
+								<article class="cover">
+									<span class="image">
+										<img src="images/BH pg 01 panel 06.png" alt="" />
+									</span>
+								</article>
+								
 							</section>
 							<!--
 								<article class="style2">
