--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 										<img src="images/Bloody Hel Cover 02b.png" alt="" />
 									</span>
 								</article>
-								
+
+								<h6>Panels</h6>
 								<!-- PAGE 01 -->
 								<article class="cover">
 									<span class="image">
@@ -238,7 +239,8 @@
 										<img src="images/BH pg 06 panel 07.png" alt="" />
 									</span>
 								</article>
-								
+
+								<h6>Thumbnails</h6>
 								<!-- PAGE 07 -->
 								<article class="cover">
 									<span class="image">
