--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 									</span>
 								</article>
 
+							</section>
+
+							<section class="tiles">
+
 								<h6>Panels</h6>
 								<!-- PAGE 01 -->
 								<article class="cover">
@@ -239,6 +243,10 @@
 										<img src="images/BH pg 06 panel 07.png" alt="" />
 									</span>
 								</article>
+
+							</section>
+
+							<section class="tiles">
 
 								<h6>Thumbnails</h6>
 								<!-- PAGE 07 -->
