--- a/index.html
+++ b/index.html
@@ -44,15 +44,22 @@
 									</span>
 								</article>
 							</section>
+							<section class="tiles">
+								<article class="cover">
+									<span class="image">
+										<img src="" alt="" />
+									</span>
+								</article>
+							</section>
+
 
 							
 
 							<section class="tiles">
 								
-
-								<h6>Comic Book</h6>
 								<!-- PAGE 01 -->
 								<article class="cover">
+									<h6>Comic Book</h6>
 									<span class="image">
 										<img src="images/BH pg 01 panel 01.png" alt="" />
 									</span>
