--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 							<section class="tiles">
 								
 								<!-- COVER 1 -->
-								<h6>Cover Art</h6>
 								<article class="cover">
+									<h6>Cover Art</h6>
 									<span class="image">
 										<img src="images/Bloody Hel Cover.png" alt="" />
 									</span>
@@ -265,12 +265,25 @@
 							</section>
 
 							<section class="tiles">
-								<p></p>
-								<p></p>
+								<article class="cover">
+									<span class="image">
+										<img src="" alt="" />
+									</span>
+								</article>
+							</section>
+							<section class="tiles">
+								<article class="cover">
+									<span class="image">
+										<img src="" alt="" />
+									</span>
+								</article>
+							</section>
 
-								<h6>Thumbnails</h6>
+							<section class="tiles">
+
 								<!-- PAGE 07 -->
 								<article class="cover">
+									<h6>Thumbnails</h6>
 									<span class="image">
 										<img src="images/BH pg 07 panel 01.png" alt="" />
 									</span>
