--- a/index.html
+++ b/index.html
@@ -60,21 +60,19 @@
 								
 								<!-- PAGE 01 -->
 								<article class="cover">
-									<h6>Comic Book</h6>
+									<h6>panel 1</h6>
 									<span class="image">
 										<img src="images/BH pg 01 panel 01.png" alt="" />
 									</span>
 								</article>
 								<article class="cover">
-									<p></p>
-									<p></p>
+									<h1>panel 2</h1>
 									<span class="image">
 										<img src="images/BH pg 01 panel 02.png" alt="" />
 									</span>
 								</article>
 								<article class="cover">
-									<p></p>
-									<p></p>
+									<h1>panel 3</h1>
 									<span class="image">
 										<img src="images/BH pg 01 panel 03.png" alt="" />
 									</span>
