--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 								<article class="cover">
 									<h6>Issue #2</h6>
 									<span class="image">
-										<img src="images/Bloody Hel Cover 02b.png" alt="" />
+										<img src="images/Bloody Hel Cover darker face.png" alt="" />
 									</span>
 								</article>
 
