--- a/index.html
+++ b/index.html
@@ -61,18 +61,111 @@
 										<img src="images/sketch 1-1.png" alt="" />
 									</span>
 								</article>
-							
 								<article class="cover">
 									<h6>inked</h6>
 									<span class="image">
-										<img src="images/inked P1p1.png" alt="" />
+										<img src="images/inked 1-2.png" alt="" />
 									</span>
 								</article>
-
 								<article class="cover">
 									<h6>final</h6>
 									<span class="image">
 										<img src="images/BH pg 01 panel 01.png" alt="" />
+									</span>
+								</article>
+
+								<article class="cover">
+									<h6>sketch</h6>
+									<span class="image">
+										<img src="images/sketch 1-2.png" alt="" />
+									</span>
+								</article>
+								<article class="cover">
+									<h6>inked</h6>
+									<span class="image">
+										<img src="images/inked 1-2.png" alt="" />
+									</span>
+								</article>
+								<article class="cover">
+									<h6>final</h6>
+									<span class="image">
+										<img src="images/BH pg 01 panel 02.png" alt="" />
+									</span>
+								</article>
+
+								<article class="cover">
+									<h6>sketch</h6>
+									<span class="image">
+										<img src="images/sketch 1-3.png" alt="" />
+									</span>
+								</article>
+								<article class="cover">
+									<h6>inked</h6>
+									<span class="image">
+										<img src="images/inked 1-3.png" alt="" />
+									</span>
+								</article>
+								<article class="cover">
+									<h6>final</h6>
+									<span class="image">
+										<img src="images/BH pg 01 panel 03.png" alt="" />
+									</span>
+								</article>
+
+								<article class="cover">
+									<h6>sketch</h6>
+									<span class="image">
+										<img src="images/sketch 1-4.png" alt="" />
+									</span>
+								</article>
+								<article class="cover">
+									<h6>inked</h6>
+									<span class="image">
+										<img src="images/inked 1-4.png" alt="" />
+									</span>
+								</article>
+								<article class="cover">
+									<h6>final</h6>
+									<span class="image">
+										<img src="images/BH pg 01 panel 04.png" alt="" />
+									</span>
+								</article>
+
+								<article class="cover">
+									<h6>sketch</h6>
+									<span class="image">
+										<img src="images/sketch 1-5.png" alt="" />
+									</span>
+								</article>
+								<article class="cover">
+									<h6>inked</h6>
+									<span class="image">
+										<img src="images/inked 1-5.png" alt="" />
+									</span>
+								</article>
+								<article class="cover">
+									<h6>final</h6>
+									<span class="image">
+										<img src="images/BH pg 01 panel 05.png" alt="" />
+									</span>
+								</article>
+
+								<article class="cover">
+									<h6>sketch</h6>
+									<span class="image">
+										<img src="images/sketch 1-6.png" alt="" />
+									</span>
+								</article>
+								<article class="cover">
+									<h6>inked</h6>
+									<span class="image">
+										<img src="images/inked 1-6.png" alt="" />
+									</span>
+								</article>
+								<article class="cover">
+									<h6>final</h6>
+									<span class="image">
+										<img src="images/BH pg 01 panel 06.png" alt="" />
 									</span>
 								</article>
 							</section>
