--- a/index.html
+++ b/index.html
@@ -173,7 +173,9 @@
 							</section>
 
 							<section class="tiles">
-								<h2>Comic Pages</h2>
+								<ul style="center">
+									<h2>Comic Pages</h2>
+								</ul>
 								<article class="cover">
 										<span class="image">
 											<img src="images/Bloody Hel page 01.png" alt="" />
