--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 								</article>
 							</section>
 							
-							<section>
+							<section class="tiles">
 								<h2>Degree</h2>
 								<!-- MEDIA -->
 								<article class="cover">
