FSND Certificate.pdf

--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
 								</article>
 							</section>
 							
+							<img src="images/FSND Certificate.pdf" alt="" />
 							<section class="tiles">
 								<h2>Degree</h2>
 								<!-- MEDIA -->
