FSND Certificate.pdf

--- a/index.html
+++ b/index.html
@@ -273,14 +273,25 @@
 								</article>
 							</section>
 							
-							<img src="images/FSND Certificate.pdf" alt="" />
+							<embed src="images/FSND Certificate.pdf" type="application/pdf">
 							<section class="tiles">
 								<h2>Degree</h2>
 								<!-- MEDIA -->
 								<article class="cover">
 									<h6>Full Stack Web Development</h6>
 									<span class="image">
-										<img src="images/FSND Certificate.pdf" alt="" />
+										<embed src="images/FSND Certificate.pdf" type="application/pdf">
+									</span>
+								</article>
+							</section>
+							
+							<section>
+								<h2>Degree</h2>
+								<!-- MEDIA -->
+								<article class="cover">
+									<h6>Full Stack Web Development</h6>
+									<span class="image">
+										<embed src="images/FSND Certificate.pdf" type="application/pdf">
 									</span>
 								</article>
 							</section>
