--- a/index.html
+++ b/index.html
@@ -273,14 +273,14 @@
 								</article>
 							</section>
 							
-							<embed src="images/FSND Certificate.pdf" type="application/pdf">
+							<img src="images/FSND.png" alt="">
 							<section class="tiles">
 								<h2>Degree</h2>
 								<!-- MEDIA -->
 								<article class="cover">
 									<h6>Full Stack Web Development</h6>
 									<span class="image">
-										<embed src="images/FSND Certificate.pdf" type="application/pdf">
+										<img src="images/FSND.png" alt="">
 									</span>
 								</article>
 							</section>
@@ -291,7 +291,7 @@
 								<article class="cover">
 									<h6>Full Stack Web Development</h6>
 									<span class="image">
-										<embed src="images/FSND Certificate.pdf" type="application/pdf">
+										<img src="images/FSND.png" alt="">
 									</span>
 								</article>
 							</section>
