add ease-in-out fade-out

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			/* Optional: Add fade-out effect before page unloads */
 			body.fade-out {
 				opacity: 0 !important;
-				transition: opacity 2.0s ease !important;
+				transition: opacity 2.0s ease-in-out !important;
 			}
 		</style>
 	</head>
