add ease fade-out

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			/* Optional: Add fade-out effect before page unloads */
 			body.fade-out {
 				opacity: 0 !important;
-				transition: opacity 2.0s cubic-bezier(0.68, -0.55, 0.27, 1.55) !important;
+				transition: opacity 2.0s ease !important;
 			}
 		</style>
 	</head>
