add 2nd Character Design sheet

--- a/index.html
+++ b/index.html
@@ -90,10 +90,17 @@
 							
 							<section class="tiles">
 								<h2>Character Design</h2>
-								<!-- MEDIA -->
 								<article class="cover">
+								<h6>Stephan Bathory</h6>
 									<span class="image">
 										<img src="images/Bathory Design Page.jpg" alt="">
+									</span>
+								</article>
+								
+								<article class="cover">
+								<h6>King Bathory</h6>
+									<span class="image">
+										<img src="images/King Bathory character sheet.jpg" alt="">
 									</span>
 								</article>
 							</section>
