add 2nd Character Design sheet

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 								<article class="cover">
 								<h6>King Bathory</h6>
 									<span class="image">
-										<img src="images/King Bathory character sheet.jpg" alt="">
+										<img src="images/King Bathory character sheet.png" alt="">
 									</span>
 								</article>
 							</section>
