--- a/index.html
+++ b/index.html
@@ -35,16 +35,12 @@
 							<header>
 								<p></p>
 								<h1>David Witka's Portfolio</h1>
+								<p></p>
+								<img src="images/Introduction.png" alt="" />
 							</header>
 							<section class="tiles">
 								<h2>Compositions</h2>
 								<!-- MEDIA -->
-								<article class="cover">
-									<h6>Advertisement</h6>
-									<span class="image">
-										<img src="images/media01.png" alt="" />
-									</span>
-								</article>
 								<article class="cover">
 									<h6>Book Cover</h6>
 									<span class="image">
@@ -67,6 +63,12 @@
 									<h6>Video Thumbnail</h6>
 									<span class="image">
 										<img src="images/media05.jpg" alt="" />
+									</span>
+								</article>
+								<article class="cover">
+									<h6>Advertisement</h6>
+									<span class="image">
+										<img src="images/media01.png" alt="" />
 									</span>
 								</article>
 							</section>
