--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 							
 							
 							<section class="tiles">
+								<h2>BIO</h2>
 								<article class="cover">
 									<span class="image">
 										<img src="images/introduction part1.png" alt="" />
