--- a/index.html
+++ b/index.html
@@ -452,9 +452,9 @@
 
 
 							<ul class="copyright">
-								<!--
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://site.com"></a></li>
-								-->
+								
+								<li>&copy; Bloody Hel. All rights reserved</li><li>Design: David Witka & Charles Fiddler</a></li>
+								
 							</ul>
 						</div>
 					</footer>
