edit fire gobbler

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 								<article class="cover">
 								<h6>Fire Gobbler</h6>
 									<span class="image">
-										<img src="images/fire gremlin 3d.png" alt="">
+										<img src="images/fire gobbler model sheet.png" alt="">
 									</span>
 								</article>
 								
