change title to Midnight Riders

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 							</section>
 							
 							<section class="tiles">
-								<h2>Bad Brain Character Designs for "Midnight Riders"</h2>
+								<h2>Midnight Riders</h2>
 								
 								<article class="cover">
 								<h6>Fire Gobbler</h6>
