--- a/index.html
+++ b/index.html
@@ -117,7 +117,14 @@
 								<article class="cover">
 								<h6>Countess Bathory</h6>
 									<span class="image">
-										<img src="images/Elizabeth Bathory character sheet.png" alt="">
+										<img src="images/Elizabeth Bathory angry.png" alt="">
+									</span>
+								</article>
+								
+								<article class="cover">
+								<h6>Countess Bathory</h6>
+									<span class="image">
+										<img src="images/Elizabeth Bathory.png" alt="">
 									</span>
 								</article>
 								
